--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
   </head>
 
   <body>
+  <%= render 'layouts/navbar' %>	
   <div class="container <%=controller_name%> <%=action_name%>">
-  	
     <%= yield %>
   </div>
   </body>
