--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,9 @@
 				<li class="list-group-item">
 					<%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
 				</li>
+				<li class="nav-item">
+					<%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
+				</li>
 			</ul>
 		</div>
 	</div>	
@@ -19,18 +22,21 @@
 <div class="navbar navbar-light bg-faded">
 	<div class="container">
 		<a class='navbar-brand' href='/'>
-			Alex <span class="light">blog</span>
+			Alex<span class="light">blog</span>
 		</a>
-		<button class="navbar-toggler hidden-sm-up pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">&#9776;</button>
-		<ul class="nav navbar-nav pull-sm-right hidden-xs-down">
+		<button class="navbar-toggler hidden-sm-up float-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">&#9776;</button>
+		<ul class="nav navbar-nav float-sm-right hidden-xs-down">
 			<li class="nav-item">
 				<%= link_to 'Blog', root_path, class: "nav-link #{yield(:blog_active)}" %>
 			</li>
 			<li class="nav-item">
-				<%= link_to 'About', root_path, class: "nav-link #{yield(:about_active)}" %>
+				<%= link_to 'About', about_path, class: "nav-link #{yield(:about_active)}" %>
 			</li>
 			<li class="nav-item">
-				<%= link_to 'Contact', root_path, class: "nav-link #{yield(:contact_active)}" %>
+				<%= link_to 'Contact', contact_path, class: "nav-link #{yield(:contact_active)}" %>
+			</li>
+			<li class="nav-item">
+				<%= link_to 'My Posts', author_posts_path, class: "nav-link #{yield(:author)}" %>
 			</li>
 		</ul>
 	</div>
