--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -6,10 +6,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
   </head>
 
   <body>
   <%= render 'layouts/navbar' %>	
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
   <div class="container <%=controller_name%> <%=action_name%>">
     <%= yield %>
   </div>
